# StereoPipeline

./: .gitignore  .readthedocs.yml  AUTHORS  AUTHORS.rst  CMakeLists.txt  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  COPYING  INSTALL  INSTALLGUIDE  INSTALLGUIDE.rst  Makefile.am  NEWS  NEWS.rst  README  README.md  README.rst  RELEASEGUIDE  THIRDPARTYLICENSES  THIRDPARTYLICENSES.rst  VIRTMACHINES  acinclude.m4  autogen  build_vw_asp.csh  config.options.columbia  config.options.default  config.options.example  config.options.example_full  config.options.irg  configure.ac  stereo.default.example
data/: HiRISE_stitch.py  Makefile.am  TriangulationError.lut  cam2map4stereo.py  hiedr2mosaic.py  surf_match.patch
data/CTX/: Makefile  stereo.default  stereo.map  stereo.nonmap
data/HiRISE/: Makefile  downloader.sh  stereo.nonmap
data/K10/: Makefile  black_left.tsai  black_right.tsai  stereo.default
data/MER/: Makefile  stereo.default  stereo.default.navcam
data/MOC/: Makefile  control.net  stereo.default  stereo.map  stereo.nonmap
examples/: Makefile.am
examples/CTX/: Makefile  control.net  stereo.map
examples/HiRISE/: stereo.nonmap
examples/K10/: Makefile  black_left.tsai  black_right.tsai
examples/MER/: stereo.default
examples/MOC/: M0100115.imq
graveyard/: CameraAdjust.h  DEM.cc  DEM.h  DiskImageResourceDDD.cc  DiskImageResourceDDD.h  IsisAdjustCameraModel.cc  IsisAdjustCameraModel.h  Makefile.am  SoftwareRenderer.cc  SoftwareRenderer.h  SurfaceNURBS.h  TestAntiAliasing.cxx  TestIsisAdjustCameraModel.cxx  TestNURBS.h  TestPEDR.h  TestSoftwareRenderer.cxx  TiePointTransform.h  aligndem.cc  autogen  bundlevis.cc  bundlevis.h  ccd_solve.cc  configure.ac  csv_filter.cc  ctximage.cc  cuda_code.h  cuda_test.cc  datum_convert.rst  datum_convert_cpp.cc  dem_profile.cc  isis_adjust.cc  isis_adjust.h  isis_adjust_camera_err.cc  isis_adjust_cnet_clip.cc  makeFlightTrackKml.py  nff_terrain.cc  nff_terrain.h  nurbs.cc  orthoproject.cc  plateorthoproject.cc  (+5 more)
graveyard/ControlNetTK/: Equalization.h  cnet_build.cc  cnet_convert.cc  cnet_merge.cc  isis_position_extract.cc  pairlist_degree.py  reduce_match.cc  render_gcp.cc  vw_position_extract.cc
graveyard/HRSC/: ExtoriExtrinsics.h  HRSC.cc  HRSC.h  Makefile.am  StereoSessionHRSC.cc  StereoSessionHRSC.h
graveyard/Hidden/: CMakeLists.txt  csv_filter.cc  s2p_fltr.cc  s2p_pprc.cc
graveyard/MOC/: Ephemeris.cc  Ephemeris.h  MOLA.cc  MOLA.h  MOLAReader.cc  MOLAReader.h  Makefile.am  Metadata.cc  Metadata.h  StereoSessionMOC.cc  StereoSessionMOC.h
graveyard/MPI/: BundleAdjustmentMPI.h  BundleAdjustmentMPISparse.h  isis_mpi_adjust.cc
graveyard/SpiceIO/: SpiceUtilities.cc  TabulatedDataReader.cc  TabulatedDataReader.h
graveyard/gui/: AlignmentWidget.cc  AlignmentWidget.h  CorrelationWidget.cc  CorrelationWidget.h  CostFunctionWidget.cc  CostFunctionWidget.h  InputWidget.cc  InputWidget.h  KyleStereo.h  MainWindow.cc  MainWindow.h  Noise.h  PreprocessWidget.cc  PreprocessWidget.h  PreviewGLWidget.cc  PreviewGLWidget.h  QCompatFormLayout.h  SearchWindowWidget.cc  SearchWindowWidget.h  StereoGuiSession.cc  StereoGuiSession.h
graveyard/m4/: ax_check_attribute.m4  ax_find_files.m4  ax_group_pkg.m4  ax_pkg_boost_check_version.m4  ax_pkg_boost_lib.m4  ax_pkg_check_function.m4  fixups.m4
graveyard/ngt_utils/: containers.py  lonlat.py  mars.py  tracker.py
graveyard/tests/: Makefile.am  TestNURBS.h  TestPEDR.h
src/: BlobIndexThreaded.cc  BundleAdjust.h  BundleAdjustUtils.cc  BundleAdjustUtils.h  CMakeLists.txt  CameraAdjust.h  ControlNetworkLoader.cc  ControlNetworkLoader.h  DEM.cc  DEM.h  GeoRef.cc  GeoRef.h  ImageAlign.cc  ImageAlign.h  InpaintView.h  KML.cc  KML.h  LinescanAdjust.h  MOLAReader.cc  MOLAReader.h  Makefile.am  MedianFilter.h  Metadata.h  NormXCorr2.cc  NormXCorr2.h  OrthoRasterizer.h  Outliers.cc  Outliers.h  SoftwareRenderer.cc  SoftwareRenderer.h  SparseView.h  Spice.cc  Spice.h  SpiceUtilities.cc  SpiceUtilities.h  StereoEngine.h  StereoSession.cc  StereoSession.h  StereoSessionKeypoint.cc  StereoSessionKeypoint.h  (+52 more)
src/HRSC/: ExtoriExtrinsics.h  HRSC.cc  HRSC.h  StereoSessionHRSC.cc  StereoSessionHRSC.h
src/Isis/: BaseEquation.h  DiskImageResourceIsis.cc  DiskImageResourceIsis.h  Equation.cc  Equation.h  Equations.cc  Equations.h  IsisAdjustCameraModel.cc  IsisAdjustCameraModel.h  IsisCameraModel.cc  IsisCameraModel.h  PolyEquation.cc  PolyEquation.h  RPNEquation.cc  RPNEquation.h  StereoSessionIsis.cc  StereoSessionIsis.h
src/MOC/: Ephemeris.cc  Ephemeris.h  MOLA.cc  MOLA.h  Metadata.cc  Metadata.h  StereoSessionMOC.cc  StereoSessionMOC.h
src/RMAX/: RMAX.cc  RMAX.h  RmaxBundles.h  RmaxInterestPoint.cc  RmaxInterestPoint.h  StereoSessionRmax.cc  StereoSessionRmax.h
src/apollo/: StereoSessionApolloMetric.cc  StereoSessionApolloMetric.h
src/asp/: CMakeLists.txt  Core.h  FindFreeType.cmake  GenerateConfig.cmake  IsisIO.h  Makefile.am  Sessions.h  SpiceIO.h  asp_config.h.in  asp_date_config.h.in
src/asp/Camera/: ASTER_XML.cc  ASTER_XML.h  AdjustedLinescanDGModel.h  BaParams.cc  BaParams.h  BaState.cc  BaState.h  BaseCostFuns.cc  BaseCostFuns.h  BundleAdjustCamera.cc  BundleAdjustCamera.h  BundleAdjustCamera2.cc  BundleAdjustCostFuns.cc  BundleAdjustCostFuns.h  BundleAdjustEigen.cc  BundleAdjustEigen.h  BundleAdjustIO.cc  BundleAdjustIsis.cc  BundleAdjustIsis.h  BundleAdjustOptions.cc  BundleAdjustOptions.h  BundleAdjustOrbital.cc  BundleAdjustOrbital.h  BundleAdjustOutliers.cc  BundleAdjustOutliers.h  BundleAdjustResiduals.cc  BundleAdjustResiduals.h  (+73 more)
src/clementine/: StereoSessionClementine.cc  StereoSessionClementine.h
src/gui/: AlignmentWidget.cc  AlignmentWidget.h  CorrelationWidget.cc  CorrelationWidget.h  CostFunctionWidget.cc  InputWidget.cc  InputWidget.h  InputWidget.moc.cc  MainWindow.cc  MainWindow.h  MainWindow.moc.cc  Noise.h  PreprocessWidget.h  PreprocessWidget.moc.cc  PreviewGLWidget.cc  PreviewGLWidget.h  PreviewGLWidget.moc.cc  QCompatFormlayout.h  StereoGuiSession.cc  StereoGuiSession.h
src/test/: Helpers.h  test_main.cc
src/tests/: Makefile.am  TestGDAL.h  TestNURBS.h  TestPEDR.h
(+1328 files in other folders)
